--- a/index.html
+++ b/index.html
@@ -3,124 +3,209 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Chasing Dot</title>
+  <title>🎯 Chasing Dot</title>
   <link rel="manifest" href="manifest.json" />
+  <link rel="icon" href="icon-192.png" />
   <style>
-    :root { --ballColor: red; --bgColor: #111; }
     body {
-      background: var(--bgColor); color: white;
-      font-family: Arial, sans-serif; padding: 60px 10px 90px;
-      text-align: center; margin: 0;
-    }
-    #downloadBtn {
-      position: fixed; top: 10px; left: 10px;
-      background: #007bff; color: white;
-      border: none; padding: 8px 12px;
-      border-radius: 5px; cursor: pointer;
+      font-family: Arial, sans-serif;
+      background: var(--bgColor, #111);
+      color: white;
+      text-align: center;
+      margin: 0;
+      padding: 10px;
     }
     #grid {
-      display: grid; grid-template-columns: repeat(3, 100px);
-      gap: 10px; justify-content: center; margin: 20px auto;
+      display: grid;
+      grid-template-columns: repeat(3, 100px);
+      grid-template-rows: repeat(3, 100px);
+      gap: 10px;
+      justify-content: center;
+      margin: 20px auto;
     }
     .cell {
-      background: #333; width: 100px; height: 100px;
-      border-radius: 8px; display: flex;
-      justify-content: center; align-items: center; cursor: pointer;
+      width: 100px;
+      height: 100px;
+      background: #333;
+      border-radius: 10px;
     }
     .dot {
-      width: 50px; height: 50px; border-radius: 50%;
-      background: var(--ballColor);
+      background: var(--dotColor, red);
+      border-radius: 50%;
+      width: 100%;
+      height: 100%;
     }
-    .missed { background: darkred !important; }
-    #storePanel {
-      background: #222; padding: 15px;
-      border-radius: 10px; max-width: 360px;
-      margin: 0 auto 20px; display: none;
+    .missed {
+      background: red;
     }
-    .storeItem {
-      margin: 10px 0; padding: 8px;
-      background: #333; border-radius: 8px; cursor: pointer;
+    #store {
+      background: #222;
+      padding: 10px;
+      border-radius: 10px;
+      margin-top: 20px;
+      display: none;
     }
-    .locked { opacity: 0.6; }
-    iframe#ad {
-      position: fixed; bottom: 0; width: 100%;
-      height: 60px; border: none; z-index: 999;
+    .storeitem {
+      margin: 5px;
+      padding: 5px;
+      background: #333;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    #reviveBox {
+      margin-top: 20px;
+      color: red;
     }
   </style>
 </head>
 <body>
-  <button id="downloadBtn" onclick="downloadGame()">📱 Download</button>
-  <h2>🎯 Chasing Dot</h2>
-  <div>
-    Score: <span id="score">0</span> |
-    Lives: <span id="lives">3</span> |
-    High Score: <span id="highScore">0</span> |
-    🪙 Coins: <span id="coins">0</span>
-  </div>
+  <h1>🎯 Chasing Dot</h1>
+  <p>
+    <span id="score">Score: 0</span> |
+    <span id="lives">Lives: 3</span> |
+    <span id="highScore">High Score: 0</span> |
+    <span id="coins">🪙 Coins: 0</span>
+  </p>
+  <button onclick="toggleStore()">🛍️ Open/Close Store</button>
   <div id="grid"></div>
-  <button onclick="toggleStore()">🛒 Open/Close Store</button>
-  <div id="storePanel">
+
+  <div id="store">
     <h3>🎨 Skins</h3>
-    <div class="storeItem" data-skin="red">🔴 Red - Free</div>
-    <div class="storeItem locked" data-skin="dog" data-cost="10">🐶 Dog - 10 coins</div>
-    <div class="storeItem locked" data-skin="rainbow" data-cost="15">🌈 Rainbow - 15 coins</div>
-    <h3>🖼️ Themes</h3>
-    <div class="storeItem locked" data-theme="forest" data-cost="10">🌲 Forest - 10 coins</div>
-    <div class="storeItem locked" data-theme="neon" data-cost="15">💡 Neon - 15 coins</div>
-    <div class="storeItem locked" data-theme="desert" data-cost="20">🏜 Desert - 20 coins</div>
+    <div class="storeitem" data-skin="red" data-cost="0">🔴 Red - Free</div>
+    <div class="storeitem" data-skin="dog" data-cost="10">🐶 Dog - 10 coins</div>
+    <div class="storeitem" data-skin="rainbow" data-cost="15">🌈 Rainbow - 15 coins</div>
+    <h3>🌄 Themes</h3>
+    <div class="storeitem" data-theme="forest" data-cost="10">🌲 Forest - 10 coins</div>
+    <div class="storeitem" data-theme="neon" data-cost="15">💡 Neon - 15 coins</div>
+    <div class="storeitem" data-theme="desert" data-cost="20">🏜️ Desert - 20 coins</div>
   </div>
+
   <div id="reviveBox" style="display:none;">
-    <p>💀 You're out of lives! Watch an ad to revive?</p>
-    <button onclick="watchAdToRevive()">▶️ Watch Ad</button>
+    <p>❌ Game Over. <span id="cooldownText"></span></p>
+    <button onclick="watchAdToRevive()">❤️ Watch Ad to Revive</button>
   </div>
-  <audio id="bgMusic" src="sounds/bg.mp3" loop preload="auto"></audio>
+
+  <audio id="bgMusic" loop src="sounds/bg.mp3"></audio>
   <audio id="cheer" src="sounds/cheer.mp3"></audio>
   <audio id="boo" src="sounds/boo.mp3"></audio>
-  <iframe id="ad" src="https://www.profitableratecpm.com/drmjgriq2?key=f3d635f9a014d5973a07432322c6ea01"></iframe>
+  <audio id="fail" src="sounds/fail.mp3"></audio>
+  <audio id="victory" src="sounds/victory.mp3"></audio>
+  <script>
+    const grid = document.getElementById("grid");
+    const scoreEl = document.getElementById("score");
+    const livesEl = document.getElementById("lives");
+    const highScoreEl = document.getElementById("highScore");
+    const coinsEl = document.getElementById("coins");
+    const store = document.getElementById("store");
+    const reviveBox = document.getElementById("reviveBox");
+    const cheer = document.getElementById("cheer");
+    const boo = document.getElementById("boo");
+    const bgMusic = document.getElementById("bgMusic");
 
-  document.querySelectorAll(".storeItem").forEach(item => {
-  item.onclick = () => {
-    const skin = item.dataset.skin;
-    const theme = item.dataset.theme;
-    const cost = parseInt(item.dataset.cost || "0");
-
-    if (skin) {
-      if (!unlocked.skins.includes(skin)) {
-        if (coins >= cost) {
-          coins -= cost;
-          unlocked.skins.push(skin);
-          item.classList.remove("locked"); // ✅ Unlock
-        } else return alert("Not enough coins!");
-      }
-      selectedSkin = skin;
-    }
-
-    if (theme) {
-      if (!unlocked.themes.includes(theme)) {
-        if (coins >= cost) {
-          coins -= cost;
-          unlocked.themes.push(theme);
-          item.classList.remove("locked"); // ✅ Unlock
-        } else return alert("Not enough coins!");
-      }
-      selectedTheme = theme;
-      document.documentElement.style.setProperty("--bgColor",
-        theme === "forest" ? "#1e3d2f" :
-        theme === "neon" ? "#001133" :
-        theme === "desert" ? "#806c3b" : "#111");
-    }
-
-    updateStats();
-    saveProgress();
-  };
-});
-
+    let score = 0, lives = 3, highScore = 0, coins = 0;
+    let dotIndex = 4;
+    let started = false;
+    let moveSpeed = 1500;
+    let interval;
+    let selectedSkin = "red";
+    let selectedTheme = "";
+    let unlocked = JSON.parse(localStorage.getItem("unlocked") || '{"skins":["red"],"themes":[]}');
 
     function updateStats() {
-      scoreEl.textContent = score;
-      livesEl.textContent = lives;
-      highScoreEl.textContent = highScore = Math.max(highScore, score);
-      coinsEl.textContent = coins;
+      scoreEl.textContent = `Score: ${score}`;
+      livesEl.textContent = `Lives: ${lives}`;
+      highScoreEl.textContent = `High Score: ${highScore}`;
+      coinsEl.textContent = `🪙 Coins: ${coins}`;
+    }
+
+    function saveProgress() {
+      localStorage.setItem("highScore", highScore);
+      localStorage.setItem("coins", coins);
+      localStorage.setItem("unlocked", JSON.stringify(unlocked));
+      localStorage.setItem("skin", selectedSkin);
+      localStorage.setItem("theme", selectedTheme);
+    }
+
+    function placeDot(index) {
+      document.querySelectorAll(".cell").forEach((c, i) => {
+        c.innerHTML = i === index ? `<div class="dot" style="background:${getSkinColor()}"></div>` : "";
+        c.className = "cell";
+      });
+    }
+
+    function getSkinColor() {
+      if (selectedSkin === "dog") return "#c96";
+      if (selectedSkin === "rainbow") return "linear-gradient(45deg, red, orange, yellow, green, blue)";
+      return "red";
+    }
+
+    function handleClick(i) {
+      if (lives <= 0) return;
+      if (!started && i === dotIndex) {
+        started = true;
+        score = 1;
+        coins++;
+        updateStats();
+        interval = setInterval(nextDot, moveSpeed);
+        nextDot();
+        return;
+      }
+      if (i === dotIndex) {
+        score++;
+        coins++;
+        if (score > highScore) highScore = score;
+        if (score % 10 === 0) {
+          cheer.play();
+          if (moveSpeed > 500) {
+            moveSpeed -= 100;
+            clearInterval(interval);
+            interval = setInterval(nextDot, moveSpeed);
+          }
+        }
+        nextDot();
+      } else {
+        lives--;
+        boo.play();
+        document.querySelectorAll(".cell")[i].classList.add("missed");
+        if (lives <= 0) {
+          clearInterval(interval);
+          reviveBox.style.display = "block";
+          localStorage.setItem("cooldown", Date.now());
+        }
+      }
+      updateStats();
+      saveProgress();
+    }
+
+    function nextDot() {
+      dotIndex = Math.floor(Math.random() * 9);
+      placeDot(dotIndex);
+    }
+
+    function init() {
+      highScore = parseInt(localStorage.getItem("highScore") || "0");
+      coins = parseInt(localStorage.getItem("coins") || "0");
+      selectedSkin = localStorage.getItem("skin") || "red";
+      selectedTheme = localStorage.getItem("theme") || "";
+
+      if (selectedTheme === "forest") document.body.style.background = "#1e3d2f";
+      if (selectedTheme === "neon") document.body.style.background = "#001133";
+      if (selectedTheme === "desert") document.body.style.background = "#806c3b";
+
+      for (let i = 0; i < 9; i++) {
+        const cell = document.createElement("div");
+        cell.className = "cell";
+        cell.addEventListener("click", () => handleClick(i));
+        grid.appendChild(cell);
+      }
+
+      placeDot(4);
+      updateStats();
+      bgMusic.play().catch(() => {});
+    }
+
+    function toggleStore() {
+      store.style.display = store.style.display === "none" ? "block" : "none";
     }
 
     function watchAdToRevive() {
@@ -128,60 +213,57 @@
       setTimeout(() => {
         if (win) win.close();
         lives = 1;
-        document.getElementById("reviveBox").style.display = "none";
-        interval = setInterval(() => {
-          dotIndex = Math.floor(Math.random() * 9);
-          placeDot(dotIndex);
-        }, moveSpeed);
+        started = true;
+        reviveBox.style.display = "none";
         updateStats();
+        interval = setInterval(nextDot, moveSpeed);
       }, 10000);
     }
 
-    function downloadGame() {
-      window.location.href = "chasing-dot.zip";
-    }
-
-    document.querySelectorAll(".storeItem").forEach(item => {
+    document.querySelectorAll(".storeitem").forEach(item => {
       item.onclick = () => {
         const skin = item.dataset.skin;
         const theme = item.dataset.theme;
-        const cost = parseInt(item.dataset.cost || "0");
+        const cost = parseInt(item.dataset.cost);
         if (skin) {
           if (!unlocked.skins.includes(skin)) {
-            if (coins >= cost) { coins -= cost; unlocked.skins.push(skin); }
-            else return alert("Not enough coins!");
+            if (coins < cost) return alert("Not enough coins!");
+            coins -= cost;
+            unlocked.skins.push(skin);
           }
           selectedSkin = skin;
         }
         if (theme) {
           if (!unlocked.themes.includes(theme)) {
-            if (coins >= cost) { coins -= cost; unlocked.themes.push(theme); }
-            else return alert("Not enough coins!");
+            if (coins < cost) return alert("Not enough coins!");
+            coins -= cost;
+            unlocked.themes.push(theme);
           }
           selectedTheme = theme;
-          document.documentElement.style.setProperty("--bgColor",
-            theme === "forest" ? "#1e3d2f" : theme === "neon" ? "#001133" : theme === "desert" ? "#806c3b" : "#111");
+          document.body.style.background =
+            theme === "forest" ? "#1e3d2f" :
+            theme === "neon" ? "#001133" :
+            theme === "desert" ? "#806c3b" : "#111";
         }
-        updateStats(); saveProgress();
+        updateStats();
+        saveProgress();
       };
     });
 
-    function init() {
-      highScore = parseInt(localStorage.getItem("highScore") || "0");
-      coins = parseInt(localStorage.getItem("coins") || "0");
-      updateStats();
-      for (let i = 0; i < 9; i++) {
-        const cell = document.createElement("div");
-        cell.className = "cell";
-        cell.addEventListener("click", () => handleClick(i));
-        grid.appendChild(cell);
-        cells.push(cell);
+    window.onload = () => {
+      const cooldown = parseInt(localStorage.getItem("cooldown") || "0");
+      const timeLeft = 5 * 60 * 1000 - (Date.now() - cooldown);
+      if (timeLeft > 0) {
+        reviveBox.style.display = "block";
+        document.getElementById("cooldownText").textContent = `(Wait ${(timeLeft / 1000).toFixed(0)}s or watch ad)`;
+      } else {
+        init();
       }
-      placeDot(dotIndex = 4); // Always starts centered
-    }
+    };
 
-    if ('serviceWorker' in navigator) navigator.serviceWorker.register('service-worker.js');
-    init();
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register("service-worker.js");
+    }
   </script>
 </body>
 </html>
